--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
   "devDependencies": {
     "nodemon": "^3.1.10",
     "prisma": "^6.19.0"
-  }
+  },
+
+  "engines": {
+  "node": "20.x"
+}
+
 }
