--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "ecomgest-backend",
   "version": "1.0.0",
   "description": "Backend de ECOMGEST",
-  "main": "server.js",
+  "main": "src/server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
