Fix startCommand for Render

--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,6 @@ services:
     env: node
     plan: free
     buildCommand: "npm install"
-    startCommand: "node server.js"
+    startCommand: "node src/server.js"
     runtime: "node"
     nodeVersion: "20.11.0"
